--- a/app/src/main/res/layout/rv_forecast.xml
+++ b/app/src/main/res/layout/rv_forecast.xml
@@ -242,6 +242,7 @@
     </LinearLayout>
 
     <TableRow
+        android:id="@+id/tableAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
