--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -1,152 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bguvi"
+    android:background="@mipmap/bguvi2"
     tools:context="com.openweather.openweather.UVIActivity.UVIActivity">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="紫外線"
-        android:textColor="#fff"
-        android:textSize="36sp"
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="47dp"
-        android:layout_marginTop="34dp"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="47dp" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UVI"
-        android:textColor="#fff"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        android:layout_marginEnd="29dp"
-        app:layout_constraintRight_toRightOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginRight="29dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="台南市"
-        android:textColor="#fff"
-        android:textSize="50sp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintRight_toRightOf="@+id/imageView3"
-        android:layout_marginTop="9dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="11dp"
-        app:layout_constraintTop_toTopOf="@+id/textView2"
-        app:layout_constraintLeft_toRightOf="@+id/relativelatout" />
-
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/relativelatout"
-        android:layout_width="150dp"
-        android:layout_height="180dp"
-        android:background="#1effffff"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
-        android:layout_marginStart="40dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="69dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="40dp">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#54aeaeae">
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="過量級"
+            android:text="紫外線"
             android:textColor="#fff"
-            android:textSize="28sp"
+            android:textSize="36sp"
             tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="19dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintLeft_toLeftOf="parent" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8"
-            android:textSize="80sp"
-            android:textColor="#a71a15"
-            android:id="@+id/textView9"
-            tools:layout_constraintTop_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintBottom_creator="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="47dp"
+            android:layout_marginTop="34dp"
             tools:layout_constraintLeft_creator="1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintVertical_bias="0.18" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="0dp"
-        android:layout_height="120dp"
-        android:background="@drawable/round_box2"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="62dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginEnd="62dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="18dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="62dp"
-        android:layout_marginRight="62dp"
-        android:id="@+id/constraintLayout">
+            android:layout_marginLeft="47dp" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:text="UVI"
+            android:textColor="#fff"
+            android:textSize="30sp"
+            android:textStyle="bold"
             tools:layout_constraintTop_creator="1"
-            android:layout_marginStart="78dp"
-            android:layout_marginTop="267dp"
-            app:layout_constraintTop_toBottomOf="parent"
+            tools:layout_constraintRight_creator="1"
+            android:layout_marginEnd="29dp"
+            app:layout_constraintRight_toRightOf="@+id/textView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            android:layout_marginRight="29dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="台南市"
+            android:textColor="#fff"
+            android:textSize="50sp"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintBottom_creator="1"
+            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintRight_toRightOf="@+id/imageView3"
+            android:layout_marginTop="9dp"
             tools:layout_constraintLeft_creator="1"
+            android:layout_marginBottom="11dp"
+            app:layout_constraintTop_toTopOf="@+id/textView2"
+            app:layout_constraintLeft_toRightOf="@+id/relativelatout" />
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/relativelatout"
+            android:layout_width="130dp"
+            android:layout_height="180dp"
+            android:layout_marginBottom="66dp"
+            android:layout_marginLeft="37dp"
+            android:layout_marginStart="40dp"
+            android:background="#1effffff"
+            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="78dp" />
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1">
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:text="過量級"
+                android:textColor="#a71a15"
+                android:textSize="28sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintRight_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8"
+                android:textColor="#a71a15"
+                android:textSize="80sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.504"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.18"
+                tools:layout_constraintBottom_creator="1"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintRight_creator="1"
+                tools:layout_constraintTop_creator="1" />
+
+        </android.support.constraint.ConstraintLayout>
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/constraintLayout"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginBottom="26dp"
+            android:layout_marginEnd="37dp"
+            android:layout_marginLeft="37dp"
+            android:layout_marginRight="37dp"
+            android:layout_marginStart="37dp"
+            android:background="@drawable/round_box2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:layout_constraintBottom_creator="1"
+            tools:layout_constraintLeft_creator="1"
+            tools:layout_constraintRight_creator="1">
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="78dp"
+                android:layout_marginStart="78dp"
+                android:layout_marginTop="267dp"
+                android:text="TextView"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="parent"
+                tools:layout_constraintLeft_creator="1"
+                tools:layout_constraintTop_creator="1" />
+        </android.support.constraint.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="123dp"
+            android:layout_height="92dp"
+            app:srcCompat="@mipmap/sunglasses"
+            tools:layout_constraintTop_creator="1"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintBottom_creator="1"
+            app:layout_constraintBottom_toBottomOf="@+id/relativelatout"
+            android:layout_marginEnd="44dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/relativelatout"
+            android:layout_marginRight="44dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="測站: 台南"
+            android:textSize="15sp"
+            tools:layout_constraintTop_creator="1"
+            android:layout_marginTop="20dp"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/textView12"
+            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="您目前位置為: 歸仁"
+            android:textSize="15sp"
+            tools:layout_constraintTop_creator="1"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/textView10" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="發布機關: 中央氣象局"
+            android:textSize="15sp"
+            tools:layout_constraintTop_creator="1"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView12"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/textView11" />
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:text="發布時間: 2017-02-25 13:00"
+            tools:layout_constraintTop_creator="1"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView10"
+            tools:layout_constraintLeft_creator="1"
+            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
+            android:layout_marginLeft="28dp" />
+
     </android.support.constraint.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="123dp"
-        android:layout_height="92dp"
-        app:srcCompat="@mipmap/sunglasses"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/relativelatout"
-        android:layout_marginEnd="44dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/relativelatout"
-        android:layout_marginRight="44dp" />
-
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
