--- a/app/src/main/res/layout/rv_astronomy.xml
+++ b/app/src/main/res/layout/rv_astronomy.xml
@@ -9,6 +9,8 @@
     android:layout_alignParentStart="true"
     android:layout_below="@+id/weather"
     android:layout_marginBottom="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_marginTop="15dp"
     android:background="@drawable/round_box">
 
