--- a/app/src/main/res/layout/rv_atmosphere.xml
+++ b/app/src/main/res/layout/rv_atmosphere.xml
@@ -9,6 +9,8 @@
     android:layout_alignParentStart="true"
     android:layout_below="@+id/weather"
     android:layout_marginBottom="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_marginTop="15dp"
     android:background="@drawable/round_box">
 
@@ -52,21 +54,21 @@
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/humidity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/humidity"
             android:gravity="center_horizontal"
             android:text="@string/humidity"
             android:textColor="#fff"
             android:textSize="15sp" />
 
         <TextView
+            android:id="@+id/visiblity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
             android:gravity="center_horizontal"
-            android:id="@+id/visiblity"
             android:text="@string/visiblity"
             android:textColor="#fff"
             android:textSize="15sp" />
