--- a/app/src/main/res/layout/rv_item1.xml
+++ b/app/src/main/res/layout/rv_item1.xml
@@ -9,6 +9,8 @@
     android:layout_alignParentStart="true"
     android:layout_below="@+id/weather"
     android:layout_marginBottom="15dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_marginTop="15dp"
     android:background="@drawable/round_box">
 
@@ -43,7 +45,7 @@
         android:layout_toRightOf="@+id/view" />
 
     <LinearLayout
-        android:id="@+id/relativeLayout"
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/temperatureView"
