--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -63,6 +63,18 @@
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@mipmap/menu" />
+
+           <ImageView
+               android:id="@+id/ivRePlace"
+               android:onClick="rePlace"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:layout_marginLeft="5dp"
+               android:layout_marginRight="15dp"
+               android:layout_marginTop="10dp"
+               android:layout_toLeftOf="@id/imageView"
+               app:srcCompat="@mipmap/replace" />
+
        </RelativeLayout>
        <com.baoyz.widget.PullRefreshLayout
            android:id="@+id/swipeRefreshLayout"
@@ -87,7 +99,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-
 
     </FrameLayout>
 </RelativeLayout>
