--- a/app/src/main/res/layout/activity_weather_now.xml
+++ b/app/src/main/res/layout/activity_weather_now.xml
@@ -27,29 +27,46 @@
                android:background="@drawable/title_shape">
 
                <LinearLayout
+                   android:id="@+id/titleLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp">
 
-                   <TextView
-                       android:layout_width="wrap_content"
+                   <TableRow
+                       android:layout_width="match_parent"
                        android:layout_height="wrap_content"
-                       android:layout_gravity="center"
-                       android:id="@+id/tvCity"
-                       android:text="台北市"
-                       android:textColor="@android:color/white"
-                       android:textSize="20sp"/>
+                       android:gravity="center_horizontal">
+
+                       <ImageView
+                           android:id="@+id/ivNow"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+
+                           android:paddingRight="3dp"
+                           android:paddingTop="4dp"
+                           app:srcCompat="@mipmap/now" />
+
+                       <TextView
+                           android:id="@+id/tvCity"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_gravity="center"
+                           android:text="台北市"
+                           android:textColor="@android:color/white"
+                           android:textSize="20sp" />
+
+                   </TableRow>
 
                    <TextView
+                       android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
-                       android:id="@+id/tvTime"
                        android:text="14:28 CST"
                        android:textColor="@android:color/white"
-                       android:textSize="12sp"/>
+                       android:textSize="12sp" />
                </LinearLayout>
            </android.support.v7.widget.Toolbar>
 
@@ -96,9 +113,9 @@
         android:id="@+id/main_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
     </FrameLayout>
 </RelativeLayout>
