--- a/app/src/main/res/layout/welcome_slide3.xml
+++ b/app/src/main/res/layout/welcome_slide3.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:layout_width="@dimen/img_width_height"
             android:layout_height="@dimen/img_width_height"
-            android:src="@mipmap/ic_discount" />
+            android:src="@mipmap/masks" />
 
         <TextView
             android:layout_width="wrap_content"
