--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,17 +15,17 @@
     <color name="alermUVI">#11f72a5a</color>
 
     <!-- Screens background color-->
-    <color name="bg_screen1">#f64c73</color>
+    <color name="bg_screen1">#ffc73e</color>
     <color name="bg_screen2">#20d2bb</color>
     <color name="bg_screen3">#3395ff</color>
     <color name="bg_screen4">#c873f4</color>
     <!-- dots inactive colors -->
-    <color name="dot_dark_screen1">#d1395c</color>
+    <color name="dot_dark_screen1">#d9a016</color>
     <color name="dot_dark_screen2">#14a895</color>
     <color name="dot_dark_screen3">#2278d4</color>
     <color name="dot_dark_screen4">#a854d4</color>
     <!-- dots active colors -->
-    <color name="dot_light_screen1">#f98da5</color>
+    <color name="dot_light_screen1">#ffd87b</color>
     <color name="dot_light_screen2">#8cf9eb</color>
     <color name="dot_light_screen3">#93c6fd</color>
     <color name="dot_light_screen4">#e4b5fc</color>
