--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     android:background="@mipmap/bguvi2"
     tools:context="com.openweather.openweather.UVIActivity.UVIActivity">
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@mipmap/ic_hamburg"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -194,7 +202,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:text="發布時間: 2017-02-25 13:00"
+            android:text="發布時間: 2017-04-21 13:30"
             tools:layout_constraintTop_creator="1"
             android:layout_marginStart="28dp"
             android:layout_marginTop="12dp"
@@ -204,5 +212,12 @@
             android:layout_marginLeft="28dp" />
 
     </android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
