1.建立AirMainActivity使用navigationtabbar下方滑動搭配Fragment(AQI、PM2.5、AIR) 2.AQIFragment設計完成(尚未連棟資料)，使用DashboardView計量表顯示數值

--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -222,5 +222,12 @@
         </android.support.constraint.ConstraintLayout>
 
     </android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
