--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -2,12 +2,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.openweather.openweather.AirActuvuty.AQIFragment">
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
+    tools:context="com.openweather.openweather.AirActuvuty.BlankFragment">
+
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello Air" />
-
+        android:text="@string/hello_blank_fragment" />
 </FrameLayout>
