--- a/app/src/main/res/layout/activity_airmain.xml
+++ b/app/src/main/res/layout/activity_airmain.xml
@@ -37,7 +37,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="台北市/中山區"
+                        android:text="台南市/歸仁區"
                         android:textColor="@android:color/white"
                         android:textSize="20sp" />
 
@@ -46,7 +46,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="14:28 CST"
+                        android:text="12:01 CST"
                         android:textColor="@android:color/white"
                         android:textSize="12sp" />
                 </LinearLayout>
