--- a/app/src/main/res/layout/fragment_aqi.xml
+++ b/app/src/main/res/layout/fragment_aqi.xml
@@ -15,7 +15,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:scrollbarFadeDuration="220"
-            android:text="細懸浮微指標"
+            android:text="空氣指標"
             android:textSize="11dp"
             app:backgroundColor="#cef5f5f5"
             app:centerCircleColor="@color/colorPrimary"
@@ -76,7 +76,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
-            android:text="活動建議:\n\n一般民眾如果有不適，如眼痛，咳嗽或喉嚨痛等，應減少體力消耗，特別是減少戶外活動。\n2.學生應避免長時間劇烈運動，進行其他戶外活動時應增加休息時間。"
+            android:text="活動建議:\n\n1.一般民眾如果有不適，如眼痛，咳嗽或喉嚨痛等，應減少體力消耗，特別是減少戶外活動。\n2.學生應避免長時間劇烈運動，進行其他戶外活動時應增加休息時間。"
             android:textColor="#222123"
             android:textStyle="bold" />
 
@@ -103,7 +103,7 @@
             android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="15dp"
-            android:text="最後更新時間2017-04-22 18:00"
+            android:text="最後更新時間2017-04-26 12:01"
             android:textSize="10sp" />
 
     </RelativeLayout>
