--- a/app/src/main/res/layout/fragment_pm25.xml
+++ b/app/src/main/res/layout/fragment_pm25.xml
@@ -43,7 +43,7 @@
             android:layout_alignParentEnd="true" />
 
         <RelativeLayout
-            android:id="@+id/relativeLayout2"
+            android:id="@+id/PMrelativeLayout"
             android:layout_width="110dp"
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
