--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/relativeLayout">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/tvNormalsuggest"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="地址:"
