--- a/app/src/main/res/layout/activity_uvi.xml
+++ b/app/src/main/res/layout/activity_uvi.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:background="#54aeaeae">
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvAllergysuggest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="紫外線"
@@ -38,8 +38,8 @@
             tools:layout_constraintTop_creator="1"
             tools:layout_constraintRight_creator="1"
             android:layout_marginEnd="29dp"
-            app:layout_constraintRight_toRightOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintRight_toRightOf="@+id/tvAllergysuggest"
+            app:layout_constraintTop_toBottomOf="@+id/tvAllergysuggest"
             android:layout_marginRight="29dp" />
 
         <TextView
@@ -53,7 +53,7 @@
             android:textSize="50sp"
             app:layout_constraintBottom_toBottomOf="@+id/textView3"
             app:layout_constraintLeft_toRightOf="@+id/relativelatout"
-            app:layout_constraintTop_toTopOf="@+id/textView2"
+            app:layout_constraintTop_toTopOf="@+id/tvAllergysuggest"
             tools:layout_constraintBottom_creator="1"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintTop_creator="1" />
