--- a/app/src/main/res/layout/fragment_aqi.xml
+++ b/app/src/main/res/layout/fragment_aqi.xml
@@ -13,14 +13,14 @@
             android:id="@+id/arc_progress"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            custom:arc_bottom_text="PM2.5"
-            custom:arc_bottom_text_size="20dp"
+            custom:arc_bottom_text="0                500"
+            custom:arc_bottom_text_size="14dp"
             custom:arc_finished_color="#1561bf"
-            custom:arc_max="90"
+            custom:arc_max="500"
             custom:arc_progress="54"
             custom:arc_stroke_width="6dp"
-            custom:arc_suffix_text=" μg/m3"
             custom:arc_suffix_text_padding="17dp"
+            custom:arc_suffix_text=" "
             custom:arc_text_size="70dp"
             custom:arc_unfinished_color="#fff" />
 
@@ -32,13 +32,13 @@
             android:text="空氣指標\nAQI"
             android:textSize="30sp"
             android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/tvNormalsuggest"
-            android:layout_alignEnd="@+id/tvNormalsuggest" />
+            android:layout_alignRight="@+id/tvDes"
+            android:layout_alignEnd="@+id/tvDes" />
 
         <RelativeLayout
-            android:id="@+id/relativeLayout2"
+            android:id="@+id/AQIrelativeLayout"
             android:layout_width="110dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/round_box_air3"
             android:layout_marginRight="18dp"
             android:layout_marginEnd="18dp"
@@ -58,7 +58,7 @@
                 android:textSize="20dp" />
         </RelativeLayout>
         <TextView
-            android:id="@+id/tvNormalsuggest"
+            android:id="@+id/tvDes"
             android:layout_width="330dp"
             android:layout_height="100dp"
             android:layout_weight="1"
@@ -70,16 +70,16 @@
             android:text="人體健康影響:\n\n對所有人的健康開始產生影響，對於敏感族群可能產生較嚴重的健康影響。"
             android:textStyle="bold"
             android:layout_marginTop="34dp"
-            android:layout_below="@+id/relativeLayout2"
+            android:layout_below="@+id/AQIrelativeLayout"
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:id="@+id/tvAllergysuggest"
+            android:id="@+id/tvNormalsuggest"
             android:layout_width="330dp"
             android:layout_height="140dp"
-            android:layout_alignLeft="@+id/tvNormalsuggest"
-            android:layout_alignStart="@+id/tvNormalsuggest"
-            android:layout_below="@+id/tvNormalsuggest"
+            android:layout_alignLeft="@+id/tvDes"
+            android:layout_alignStart="@+id/tvDes"
+            android:layout_below="@+id/tvDes"
             android:layout_marginTop="12dp"
             android:layout_weight="1"
             android:background="@drawable/bg_round_rect"
@@ -94,10 +94,20 @@
             android:id="@+id/tvPublishtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvAllergysuggest"
+            android:layout_below="@+id/tvSiteName"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:text="最後更新時間2017-04-26 12:01"
+            android:text="最後更新時間: 2017-04-26 12:01"
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/tvSiteName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tvNormalsuggest"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="12dp"
+            android:text="測站: 台南"
             android:textSize="10sp" />
     </RelativeLayout>
 
